config-files-examples/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  # Defining the rules
  rules:
    # The app host
    - host: app.test.local
      http:
        paths:
        - pathType: Exact
          path: "/"
          backend:
            service:
              name: nginx-service
              port:
                number: 80
